--- a/src/app/denuncias/denuncias/denuncias.component.html
+++ b/src/app/denuncias/denuncias/denuncias.component.html
@@ -16,234 +16,34 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style type="text/css">
-    body {
-      color: #566787;
-      background: #f5f5f5;
-      font-family: 'Varela Round', sans-serif;
-      font-size: 13px;
+  <style>
+    .main-section{
+      margin:0 auto;
+      margin-top:5%;
     }
-    .table-wrapper {
-      background: #fff;
-      padding: 20px 25px;
-      margin: 30px 0;
-      border-radius: 3px;
-      box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    .card{
+      opacity: .95;
     }
-    .table-title {
-      padding-bottom: 15px;
-      background: #435d7d;
-      color: #fff;
-      padding: 16px 30px;
-      margin: -20px -25px 10px;
-      border-radius: 3px 3px 0 0;
+    .card-body{
+      background-color: #d1d3d6;
+      box-shadow: 0px 0px 3px #848484;
     }
-    .table-title h2 {
-      margin: 5px 0 0;
-      font-size: 24px;
-    }
-    .table-title .btn-group {
-      float: right;
-    }
-    .table-title .btn {
-      color: #fff;
-      float: right;
-      font-size: 13px;
-      border: none;
-      min-width: 50px;
-      border-radius: 2px;
-      border: none;
-      outline: none !important;
-      margin-left: 10px;
-    }
-    .table-title .btn i {
-      float: left;
-      font-size: 21px;
-      margin-right: 5px;
-    }
-    .table-title .btn span {
-      float: left;
-      margin-top: 2px;
-    }
-    table.table tr th, table.table tr td {
-      border-color: #e9e9e9;
-      padding: 12px 15px;
-      vertical-align: middle;
-    }
-    table.table tr th:first-child {
-      width: 60px;
-    }
-    table.table tr th:last-child {
-      width: 100px;
-    }
-    table.table-striped tbody tr:nth-of-type(odd) {
-      background-color: #fcfcfc;
-    }
-    table.table-striped.table-hover tbody tr:hover {
-      background: #f5f5f5;
-    }
-    table.table th i {
-      font-size: 13px;
-      margin: 0 5px;
-      cursor: pointer;
-    }
-    table.table td:last-child i {
-      opacity: 0.9;
-      font-size: 22px;
-      margin: 0 5px;
-    }
-    table.table td a {
-      font-weight: bold;
-      color: #566787;
-      display: inline-block;
-      text-decoration: none;
-      outline: none !important;
-    }
-    table.table td a:hover {
-      color: #2196F3;
-    }
-    table.table td a.edit {
-      color: #FFC107;
-    }
-    table.table td a.delete {
-      color: #F44336;
-    }
-    table.table td i {
-      font-size: 19px;
-    }
-    table.table .avatar {
-      border-radius: 50%;
-      vertical-align: middle;
-      margin-right: 10px;
-    }
-    .pagination {
-      float: right;
-      margin: 0 0 5px;
-    }
-    .pagination li a {
-      border: none;
-      font-size: 13px;
-      min-width: 30px;
-      min-height: 30px;
-      color: #999;
-      margin: 0 2px;
-      line-height: 30px;
-      border-radius: 2px !important;
-      text-align: center;
-      padding: 0 6px;
-    }
-    .pagination li a:hover {
-      color: #666;
-    }
-    .pagination li.active a, .pagination li.active a.page-link {
-      background: #03A9F4;
-    }
-    .pagination li.active a:hover {
-      background: #0397d6;
-    }
-    .pagination li.disabled i {
-      color: #ccc;
-    }
-    .pagination li i {
-      font-size: 16px;
-      padding-top: 6px
-    }
-    .hint-text {
-      float: left;
-      margin-top: 10px;
-      font-size: 13px;
-    }
-    /* Custom checkbox */
-    .custom-checkbox {
-      position: relative;
-    }
-    .custom-checkbox input[type="checkbox"] {
-      opacity: 0;
-      position: absolute;
-      margin: 5px 0 0 3px;
-      z-index: 9;
-    }
-    .custom-checkbox label:before{
-      width: 18px;
-      height: 18px;
-    }
-    .custom-checkbox label:before {
-      content: '';
-      margin-right: 10px;
-      display: inline-block;
-      vertical-align: text-top;
-      background: white;
-      border: 1px solid #bbb;
-      border-radius: 2px;
-      box-sizing: border-box;
-      z-index: 2;
-    }
-    .custom-checkbox input[type="checkbox"]:checked + label:after {
-      content: '';
-      position: absolute;
-      left: 6px;
-      top: 3px;
-      width: 6px;
-      height: 11px;
-      border: solid #000;
-      border-width: 0 3px 3px 0;
-      transform: inherit;
-      z-index: 3;
-      transform: rotateZ(45deg);
-    }
-    .custom-checkbox input[type="checkbox"]:checked + label:before {
-      border-color: #03A9F4;
-      background: #03A9F4;
-    }
-    .custom-checkbox input[type="checkbox"]:checked + label:after {
-      border-color: #fff;
-    }
-    .custom-checkbox input[type="checkbox"]:disabled + label:before {
-      color: #b8b8b8;
-      cursor: auto;
-      box-shadow: none;
-      background: #ddd;
-    }
-    /* Modal styles */
-    .modal .modal-dialog {
-      max-width: 400px;
-    }
-    .modal .modal-header, .modal .modal-body, .modal .modal-footer {
-      padding: 20px 30px;
-    }
-    .modal .modal-content {
-      border-radius: 3px;
-    }
-    .modal .modal-footer {
-      background: #ecf0f1;
-      border-radius: 0 0 3px 3px;
-    }
-    .modal .modal-title {
-      display: inline-block;
-    }
-    .modal .form-control {
-      border-radius: 2px;
-      box-shadow: none;
-      border-color: #dddddd;
-    }
-    .modal textarea.form-control {
-      resize: vertical;
-    }
-    .modal .btn {
-      border-radius: 2px;
-      min-width: 100px;
-    }
-    .modal form label {
-      font-weight: normal;
-    }
-  </style>
 
+    label{
+      font-weight: bold;
+    }
+
+    .nav-tabs .nav-item a:not(.active){
+      background-color: #d1d3d6;
+    }
+
+  </style>
 </head>
 <body class="sb-nav-fixed">
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
   <a class="navbar-brand">Comisaría Virtual</a><button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle"></button>
 </nav>
-<div id="layoutSidenav">
+<div id="layoutSidenav" *ngIf="acceso === '1'">
   <div id="layoutSidenav_nav">
     <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
       <div class="sb-sidenav-menu">
@@ -263,76 +63,69 @@
           <a class="nav-link" routerLink="/denuncias">
             Denuncias</a>
           <div class="sb-sidenav-menu-heading">Cerrar Sesión</div>
-          <a class="nav-link" href="">
+          <a class="nav-link" (click)="logout()" style="cursor: pointer">
             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
             Salir</a>
         </div>
       </div>
       <div class="sb-sidenav-footer">
         <div class="small">Logged in as:</div>
-        {{getUserEmail()}}
+        {{email}}
       </div>
     </nav>
   </div>
   <div id="layoutSidenav_content">
     <main>
       <div class="container-fluid">
-        <h1 class="mt-4">Administración</h1>
-        <ol class="breadcrumb mb-4">
-          <li class="breadcrumb-item active"></li>
-        </ol>
-        <div class="container">
-          <div class="table-wrapper">
-            <div class="table-title">
-              <div class="row">
-                <div class="col-sm-6">
-                  <h2>Administrar <b>Denuncias</b></h2>
+        <div class="mx-auto col-sm-8 main-section" id="myTab" role="tablist">
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="list" role="tabpanel" aria-labelledby="list-tab">
+              <div class="card">
+                <div class="card-header">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <h4>Administrar Denuncias</h4>
+                    </div>
+                    <div class="col-sm-6">
+                      <a style="color: #fff;float: right;font-size: 13px;border: none;min-width: 50px;border-radius: 2px;border: none;outline: none !important;margin-left: 10px;" (click)="erroresFalse(); this.formulario.reset(); this.formulario.get('usuario').setValue('-1'); formulario.get('tipo').setValue('-1')" href="#addDenunciaModal" data-toggle="modal" class="btn-sm btn-success"><span>Añadir Denuncia</span></a>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-sm-6">
-                  <a (click)="erroresFalse(); this.formulario.reset(); this.formulario.get('usuario').setValue('-1'); formulario.get('tipo').setValue('-1')" href="#addDenunciaModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Añadir Denuncia</span></a>
+                <div class="card-body">
+                  <div class="table-responsive">
+                    <table id="userList" class="table table-bordered table-hover table-striped">
+                      <thead class="thead-light">
+                      <tr>
+                        <th scope="col">#</th>
+                        <th>Usuario</th>
+                        <th>Descripción</th>
+                        <th>Tipo</th>
+                        <th>Fecha</th>
+                        <th>Del</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr *ngFor="let denuncia of denuncias | paginas: page_size: page_number; let i = index">
+                        <td>{{i + 1}}</td>
+                        <td (click)="denunciaDetails = denuncia" data-toggle="modal" href="#detailsDenunciaModal" style="cursor: pointer">{{getUser(denuncia.idUsuario)}}</td>
+                        <td (click)="denunciaDetails = denuncia" data-toggle="modal" href="#detailsDenunciaModal" style="cursor: pointer">{{denuncia.descripcion.substr(0,70)}}</td>
+                        <td (click)="denunciaDetails = denuncia" data-toggle="modal" href="#detailsDenunciaModal" style="cursor: pointer">{{getTipo(denuncia.tipo)}}</td>
+                        <td (click)="denunciaDetails = denuncia" data-toggle="modal" href="#detailsDenunciaModal" style="cursor: pointer">{{denuncia.fecha | date: 'dd/MM/yy'}}</td>
+                        <td>
+                          <a (click)="cargarDenuncia(denuncia)" href="#deleteDenunciaModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                        </td>
+                      </tr>
+                      </tbody>
+                    </table>
+                    <mat-paginator [length]="denuncias.length" [pageSize]="page_size" [pageSizeOptions]="pageSizeOptions" showFirstLastButtons (page)="handlePage($event)" ></mat-paginator>
+                  </div>
                 </div>
               </div>
-            </div>
-            <table class="table table-striped table-hover">
-              <thead>
-              <tr>
-                <th>
-                </th>
-                <th>Usuario</th>
-                <th>Descripción</th>
-                <th>Tipo</th>
-                <th>Fecha</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr *ngFor="let denuncia of denuncias">
-                <td>
-                </td>
-                <td>{{getUser(denuncia.idUsuario)}}</td>
-                <td>{{denuncia.descripcion.substr(0,70) + "..."}}</td>
-                <td>{{getTipo(denuncia.tipo)}}</td>
-                <td>{{denuncia.fecha | date: 'dd/MM/yy'}}</td>
-                <td>
-                  <a (click)="cargarDenuncia(denuncia)" href="#deleteDenunciaModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-            <div class="clearfix">
-              <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-              <ul class="pagination">
-                <li class="page-item disabled"><a href="#">Previous</a></li>
-                <li class="page-item"><a href="#" class="page-link">1</a></li>
-                <li class="page-item"><a href="#" class="page-link">2</a></li>
-                <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                <li class="page-item"><a href="#" class="page-link">4</a></li>
-                <li class="page-item"><a href="#" class="page-link">5</a></li>
-                <li class="page-item"><a href="#" class="page-link">Next</a></li>
-              </ul>
             </div>
           </div>
         </div>
       </div>
+
     </main>
     <footer class="py-4 bg-light mt-auto">
       <div class="container-fluid">
@@ -422,7 +215,27 @@
     </div>
   </div>
 </div>
+<div id="detailsDenunciaModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">{{getUser(denunciaDetails.idUsuario)}}</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Descripción: </strong>{{this.denunciaDetails.descripcion}}</p>
+        <p><strong>Tipo de Denuncia: </strong>{{getTipo(this.denunciaDetails.tipo)}}</p>
+        <p><strong>Fecha: </strong>{{this.denunciaDetails.fecha | date: 'dd/MM/yyyy'}}</p>
+      </div>
+      <div class="modal-footer">
+        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cerrar">
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
-
+<script>
+    $('#addDenunciaModal').modal('hide');
+</script>
