--- a/src/app/usuarios/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios/usuarios.component.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style type="text/css">
+  <!--<style type="text/css">
     body {
       color: #566787;
       background: #f5f5f5;
@@ -237,13 +237,73 @@
       font-weight: normal;
     }
   </style>
+-->
+  <head>
+    <title>User Information and Form</title>
 
+    <!--JQUERY-->
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+    <!-- Los iconos tipo Solid de Fontawesome-->
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+    <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
+    <!-- DATA TABLE -->
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            //Asegurate que el id que le diste a la tabla sea igual al texto despues del simbolo #
+            $('#userList').DataTable();
+        } );
+    </script>
+    <style>
+      .main-section{
+        margin:0 auto;
+        margin-top:5%;
+      }
+      .card{
+        opacity: .95;
+      }
+      .card-body{
+        background-color: #d1d3d6;
+        box-shadow: 0px 0px 3px #848484;
+      }
+
+      label{
+        font-weight: bold;
+      }
+
+      .nav-tabs .nav-item a:not(.active){
+        background-color: #d1d3d6;
+      }
+
+      .nav-tabs{
+        border-bottom:0px;
+      }
+    </style>
+  </head>
 </head>
 <body class="sb-nav-fixed">
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
   <a class="navbar-brand">Comisaría Virtual</a><button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle"></button>
 </nav>
-<div id="layoutSidenav">
+<div id="layoutSidenav" *ngIf="acceso === '1'">
   <div id="layoutSidenav_nav">
     <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
       <div class="sb-sidenav-menu">
@@ -263,77 +323,67 @@
           <a class="nav-link" routerLink="../denuncias">
             Denuncias</a>
           <div class="sb-sidenav-menu-heading">Cerrar Sesión</div>
-          <a class="nav-link" (click)="logout()" routerLink="../home">
+          <a class="nav-link" (click)="logout()" style="cursor: pointer">
             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
             Salir</a>
         </div>
       </div>
       <div class="sb-sidenav-footer">
         <div class="small">Logged in as:</div>
-        {{getUserEmail()}}
+        {{email}}
       </div>
     </nav>
   </div>
   <div id="layoutSidenav_content">
     <main>
       <div class="container-fluid">
-        <h1 class="mt-4">Administración</h1>
-        <div class="container">
-          <div class="table-wrapper">
-            <div class="table-title">
-              <div class="row">
-                <div class="col-sm-6 ">
-                  <h2>Administrar <b>Usuarios</b></h2>
+        <div class="mx-auto col-sm-8 main-section" id="myTab" role="tablist">
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="list" role="tabpanel" aria-labelledby="list-tab">
+              <div class="card">
+                <div class="card-header">
+                  <h4>Administración de Usuarios</h4>
+                </div>
+                <div class="card-body">
+                  <div class="table-responsive">
+                    <div class="form-group">
+                      <input type="text" class="form-control" name="filterPost" placeholder="Search..." [(ngModel)]="filterPost">
+                    </div>
+                    <table id="userList" class="table table-bordered table-hover table-striped">
+                      <thead class="thead-light">
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">DNI</th>
+                        <th scope="col">Dirección</th>
+                        <th scope="col">Móvil</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Acceso</th>
+                        <th scope="col">Género</th>
+                        <th scope="col">Acciones</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr *ngFor="let user of usuarios | userfilter:filterPost | paginas: page_size: page_number; let i = index">
+                        <th scope="row" style="cursor:pointer" href="#detailsUserModal" data-toggle="modal" (click)="details(user)">{{i + 1}}</th>
+                        <td style="cursor:pointer" href="#detailsUserModal" data-toggle="modal" (click)="details(user)">{{user.apellidos + ", " + user.nombre}}</td>
+                        <td style="cursor:pointer" href="#detailsUserModal" data-toggle="modal" (click)="details(user)">{{user.dni}}</td>
+                        <td style="cursor:pointer" href="#detailsUserModal" data-toggle="modal" (click)="details(user)">{{user.direccion}}</td>
+                        <td style="cursor:pointer" href="#detailsUserModal" data-toggle="modal" (click)="details(user)">{{user.movil}}</td>
+                        <td style="cursor:pointer" href="#detailsUserModal" data-toggle="modal" (click)="details(user)">{{user.email}}</td>
+                        <td style="cursor:pointer" href="#detailsUserModal" data-toggle="modal" (click)="details(user)">{{getAcceso(user.acceso)}}</td>
+                        <td style="cursor:pointer" href="#detailsUserModal" data-toggle="modal" (click)="details(user)">{{getGenero(user.idGenero)}}</td>
+                        <td>
+                          <a (click)="cargarUsuario(user); abrirModificar()" href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fas fa-edit"></i></a> | <a (click)="cargarUsuario(user)" href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fas fa-user-times"></i></a>
+                        </td>
+                      </tr>
+                      </tbody>
+                    </table>
+                    <mat-paginator [length]="usuarios.length" [pageSize]="page_size" [pageSizeOptions]="pageSizeOptions" showFirstLastButtons (page)="handlePage($event)" ></mat-paginator>
+                </div>
+
                 </div>
               </div>
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="filterPost" placeholder="Search..." [(ngModel)]="filterPost">
-            </div>
-            <table class="table table-striped table-hover">
-              <thead>
-              <tr>
-                <th>
-                </th>
-                <th>Nombre</th>
-                <th>DNI</th>
-                <th>Dirección</th>
-                <th>Móvil</th>
-                <th>Email</th>
-                <th>Acceso</th>
-                <th>Género</th>
-                <th>Acciones</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr *ngFor="let user of usuarios | userfilter:filterPost">
-                <td>
-                </td>
-                <td>{{user.apellidos + ", " + user.nombre}}</td>
-                <td>{{user.dni}}</td>
-                <td>{{user.direccion}}</td>
-                <td>{{user.movil}}</td>
-                <td>{{user.email}}</td>
-                <td>{{getAcceso(user.acceso)}}</td>
-                <td>{{getGenero(user.idGenero)}}</td>
-                <td>
-                  <a (click)="cargarUsuario(user); abrirModificar()" href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                  <a (click)="cargarUsuario(user)" href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-            <div class="clearfix">
-              <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-              <ul class="pagination">
-                <li class="page-item disabled"><a href="#">Previous</a></li>
-                <li class="page-item"><a href="#" class="page-link">1</a></li>
-                <li class="page-item"><a href="#" class="page-link">2</a></li>
-                <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                <li class="page-item"><a href="#" class="page-link">4</a></li>
-                <li class="page-item"><a href="#" class="page-link">5</a></li>
-                <li class="page-item"><a href="#" class="page-link">Next</a></li>
-              </ul>
             </div>
           </div>
         </div>
@@ -397,27 +447,23 @@
               <small *ngIf="direccionFormularioEdit.errors?.required" class="text-danger">Direccion requerida</small>
               <!--question mark(?) is a safe navigation operator-->
               <small *ngIf="direccionFormularioEdit.errors?.maxlength" class="text-danger">Direccion demasiado larga</small>
-
             </div>
           </div>
           <div class="form-group">
             <small>DNI</small>
             <input type="text" class="form-control" value="" formControlName="editDNI" [ngModel]="editDNI" [class.is-invalid]="editUsuario.get('editDNI').invalid && editUsuario.get('editDNI').touched"/>
+            <div *ngIf="(dniFormularioEdit.invalid && dniFormularioEdit.touched) || dniFormularioEdit.dirty">
             <small *ngIf="dniFormularioEdit.errors?.required" class="text-danger">DNI requerido</small>
             <small *ngIf="dniFormularioEdit.errors?.pattern" class="text-danger">DNI no válido (formato: 00000000-X)</small>
+            </div>
           </div>
           <div class="form-group">
             <small>Móvil</small>
             <input type="text" name="txtEmpPhone" class="form-control" value="" formControlName="editMovil" [ngModel]="editMovil"  [class.is-invalid]="editUsuario.get('editMovil').invalid && editUsuario.get('editMovil').touched"/>
+            <div *ngIf="(movilFormularioEdit.invalid && movilFormularioEdit.touched) || movilFormularioEdit.dirty">
             <small *ngIf="movilFormularioEdit.errors?.required" class="text-danger">Móvil requerido</small>
             <small *ngIf="movilFormularioEdit.errors?.pattern" class="text-danger">Móvil no válido *9 dígitos empezando por 6 ò 7</small>
-          </div>
-          <div class="form-group">
-            <small>Email</small>
-            <input type="email" class="form-control" content="" value="" formControlName="editEmail" [ngModel]="editEmail" [class.is-invalid]="editUsuario.get('editEmail').invalid && editUsuario.get('editEmail').touched"/>
-            <small *ngIf="emailFormularioEdit.errors?.required" class="text-danger">Email requerido</small>
-            <small *ngIf="emailFormularioEdit.errors?.pattern" class="text-danger">Email no válido</small>
-            <small *ngIf="emailFormularioEdit.errors?.maxlength" class="text-danger">Email demasiado largo</small>
+            </div>
           </div>
           <div class="form-group">
             <small>Acceso</small>
@@ -468,6 +514,29 @@
     </div>
   </div>
 </div>
+<div id="detailsUserModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">{{userDetails.nombre + " " + userDetails.apellidos}}</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <p><strong>DNI:</strong> {{userDetails.dni}}</p>
+          <p><strong>Direccion:</strong> {{userDetails.direccion}}</p>
+          <p><strong>Email:</strong> {{userDetails.email}}</p>
+          <p><strong>Movil:</strong> {{userDetails.movil}}</p>
+          <p><strong>Usuario:</strong> {{getAcceso(userDetails.acceso)}}</p>
+        </div>
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cerrar">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
 
